Added file upload

--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
     "@types/omit-empty": "^1.0.1",
     "@types/shelljs": "^0.8.10",
     "@types/uuid": "^8.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
     "aws-sdk": "^2.1048.0",
+    "eslint": "^8.36.0",
     "fs-extra": "^10.0.0",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
