--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "keywords": [],
   "author": "Live Church Solutions",
   "dependencies": {
-    "@churchapps/apihelper": "^0.0.5",
+    "@churchapps/apihelper": "0.0.6",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.3.4",
     "body-parser": "^1.19.1",
