--- a/serverless.yml
+++ b/serverless.yml
@@ -35,8 +35,8 @@ functions:
     handler: lambda.nightly
     events:
       - schedule:
-        rate: cron(0 0 * * ? *)
-        enabled: true
+          rate: cron(*/45 * * * ? *)
+          enabled: true
     vpc: ${self:custom.vpcSettings.current}
 
 plugins:
