--- a/serverless.yml
+++ b/serverless.yml
@@ -38,6 +38,13 @@ functions:
           rate: cron(0 0 * * ? *)
           enabled: true
     vpc: ${self:custom.vpcSettings.current}
+  timer2Monday:
+    handler: lambda.timer2Monday
+    events:
+      - schedule:
+          rate: cron(0 2 ? * MON *)
+          enabled: true
+    vpc: ${self:custom.vpcSettings.current}
 
 plugins:
   - serverless-layers
