--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "keywords": [],
   "author": "Live Church Solutions",
   "dependencies": {
+    "@aws-sdk/client-polly": "^3.658.0",
     "@churchapps/apihelper": "0.0.14",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.3.4",
@@ -49,6 +50,6 @@
     "serverless-layers": "^2.5.1",
     "serverless-plugin-utils": "^0.2.0",
     "tslint": "^6.1.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.6.2"
   }
 }
