--- a/package.json
+++ b/package.json
@@ -46,8 +46,7 @@
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
-    "serverless": "^2.70.0",
-    "serverless-layers": "^2.5.1",
+    "serverless": "3.39.0",
     "serverless-plugin-utils": "^0.2.0",
     "tslint": "^6.1.2",
     "typescript": "^5.6.2"
