--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,11 @@
-service: content-api
+service: membership-api
+
+package:
+  individually: true
+  exclude:
+    - node_modules/**
 
 custom:
-  serverless-layers:
-    dependenciesPath: ./package.json
-    layersDeploymentBucket: "lcs-layers"
   env: ${lower(${opt:stage, self:provider.stage})}
   vpcSettings:
     prod:
@@ -11,41 +13,73 @@ custom:
         - sg-052314a1eec2f2567
       subnetIds:
         - subnet-01a6b61d749d10c46
-    current: ${ternary( ${self:custom.env}, prod, ${self:custom.vpcSettings.prod}, ~ )}
+    current: ${ternary(${self:custom.env}, prod, ${self:custom.vpcSettings.prod}, ~)}
 
 provider:
   name: aws
   runtime: nodejs18.x
   memorySize: 1024
-  timeout: 30
+  timeout: 10
   region: us-east-2
   iam:
     role: arn:aws:iam::428019619026:role/ChurchAppsRole
   environment:
     APP_ENV: ${self:custom.env}
 
+layers:
+  dependencies:
+    path: layer
+    name: ${self:service}-${sls:stage}-dependencies
+    description: Dependencies for ${self:service}
+    compatibleRuntimes:
+      - nodejs18.x
+
 functions:
   api:
+    name: membership-api-${sls:stage}-api
     handler: lambda.universal
     events:
-      - http: ANY {proxy+}
-      - http: ANY /
+      - http:
+          path: /{proxy+}
+          method: ANY
+      - http:
+          path: /
+          method: ANY
     vpc: ${self:custom.vpcSettings.current}
-  nightly:
-    handler: lambda.nightly
-    events:
-      - schedule:
-          rate: cron(0 0 * * ? *)
-          enabled: true
-    vpc: ${self:custom.vpcSettings.current}
-  timer2Monday:
-    handler: lambda.timer2Monday
-    events:
-      - schedule:
-          rate: cron(0 2 ? * MON *)
-          enabled: true
-    vpc: ${self:custom.vpcSettings.current}
+    layers:
+      - {Ref: DependenciesLambdaLayer}
+    package:
+      patterns:
+        - '!node_modules/**'
+        - '!package-lock.json'
+nightly:
+  name: membership-api-${sls:stage}-nightly
+  handler: lambda.nightly
+  events:
+    - schedule:
+        rate: cron(0 0 * * ? *)
+        enabled: true
+  vpc: ${self:custom.vpcSettings.current}
+  layers:
+    - {Ref: DependenciesLambdaLayer}
+  package:
+    patterns:
+      - '!node_modules/**'
+      - '!package-lock.json'
+timer2Monday:
+  name: membership-api-${sls:stage}-timer2Monday
+  handler: lambda.timer2Monday
+  events:
+    - schedule:
+        rate: cron(0 2 ? * MON *)
+        enabled: true
+  vpc: ${self:custom.vpcSettings.current}
+  layers:
+    - {Ref: DependenciesLambdaLayer}
+  package:
+    patterns:
+      - '!node_modules/**'
+      - '!package-lock.json'
 
 plugins:
-  - serverless-layers
   - serverless-plugin-utils
