--- a/serverless.yml
+++ b/serverless.yml
@@ -2,8 +2,10 @@ service: membership-api
 
 package:
   individually: true
-  exclude:
-    - node_modules/**
+  patterns:
+    - '!node_modules/**'
+    - '!package-lock.json'
+    - '**'
 
 custom:
   env: ${lower(${opt:stage, self:provider.stage})}
@@ -13,7 +15,8 @@ custom:
         - sg-052314a1eec2f2567
       subnetIds:
         - subnet-01a6b61d749d10c46
-    current: ${ternary(${self:custom.env}, prod, ${self:custom.vpcSettings.prod}, ~)}
+    current: ${self:custom.env} == 'prod' ? ${self:custom.vpcSettings.prod} : null
+
 
 provider:
   name: aws
@@ -48,10 +51,6 @@ functions:
     vpc: ${self:custom.vpcSettings.current}
     layers:
       - {Ref: DependenciesLambdaLayer}
-    package:
-      patterns:
-        - '!node_modules/**'
-        - '!package-lock.json'
   nightly:
     name: membership-api-${sls:stage}-nightly
     handler: lambda.nightly
@@ -62,10 +61,6 @@ functions:
     vpc: ${self:custom.vpcSettings.current}
     layers:
       - {Ref: DependenciesLambdaLayer}
-    package:
-      patterns:
-        - '!node_modules/**'
-        - '!package-lock.json'
   timer2Monday:
     name: membership-api-${sls:stage}-timer2Monday
     handler: lambda.timer2Monday
@@ -76,10 +71,6 @@ functions:
     vpc: ${self:custom.vpcSettings.current}
     layers:
       - {Ref: DependenciesLambdaLayer}
-    package:
-      patterns:
-        - '!node_modules/**'
-        - '!package-lock.json'
 
 plugins:
   - serverless-plugin-utils
