--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rimraf dist/*",
-    "copy-assets": "ts-node tools/copyAssets",
+    "copy-assets": "copyfiles -f src/apiBase/tools/templates/* dist/templates",
     "exec-deploy-staging": "serverless deploy --stage Staging",
-    "deploy-staging": "npm-run-all build exec-deploy-staging",
+    "deploy-staging": "npm-run-all build copy-assets exec-deploy-staging",
     "exec-deploy-prod": "serverless deploy --stage Prod",
     "deploy-prod": "npm-run-all build exec-deploy-prod",
     "initdb": "ts-node tools/initdb",
@@ -43,6 +43,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.20",
+    "copyfiles": "^2.4.1",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
