--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,8 @@ service: content-api
 
 package:
   individually: true
+  exclude:
+    - node_modules/**
 
 custom:
   env: ${lower(${opt:stage, self:provider.stage})}
@@ -52,6 +54,34 @@ functions:
         - '!node_modules/**'
         - '!package-lock.json'
         - '**'
+  nightly:
+    name: membership-api-${sls:stage}-nightly
+    handler: lambda.nightly
+    events:
+      - schedule:
+          rate: cron(0 0 * * ? *)
+          enabled: true
+    vpc: ${self:custom.vpcSettings.current}
+    layers:
+      - {Ref: DependenciesLambdaLayer}
+    package:
+      patterns:
+        - '!node_modules/**'
+        - '!package-lock.json'
+  timer2Monday:
+    name: membership-api-${sls:stage}-timer2Monday
+    handler: lambda.timer2Monday
+    events:
+      - schedule:
+          rate: cron(0 2 ? * MON *)
+          enabled: true
+    vpc: ${self:custom.vpcSettings.current}
+    layers:
+      - {Ref: DependenciesLambdaLayer}
+    package:
+      patterns:
+        - '!node_modules/**'
+        - '!package-lock.json'
 
 plugins:
   - serverless-plugin-utils
