--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm ci --production
+          npm ci
 
       - name: Check Serverless version
         run: npx serverless --version
