--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "ics": "^3.8.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "pexels": "^1.4.0",
