--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ics": "^3.8.1",
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
+    "oauth": "^0.10.2",
     "pexels": "^1.4.0",
     "reflect-metadata": "^0.2.2"
   },
@@ -42,6 +43,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.26",
+    "@types/oauth": "^0.9.6",
     "copyfiles": "^2.4.1",
     "fs-extra": "^11.1.1",
     "nodemon": "^2.0.15",
