--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "inversify-express-utils": "^6.4.3",
     "oauth": "^0.10.2",
     "pexels": "^1.4.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "youtube-captions-scraper": "^2.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -44,6 +45,7 @@
     "@types/express": "^4.17.13",
     "@types/mysql": "^2.15.26",
     "@types/oauth": "^0.9.6",
+    "@types/youtube-captions-scraper": "^1.0.0",
     "copyfiles": "^2.4.1",
     "fs-extra": "^11.1.1",
     "nodemon": "^2.0.15",
