--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "inversify": "^6.0.1",
     "inversify-express-utils": "^6.4.3",
     "oauth": "^0.10.2",
+    "openai": "^5.0.1",
     "pexels": "^1.4.0",
     "reflect-metadata": "^0.2.2",
     "youtube-captions-scraper": "^2.0.3"
