--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "serverless": "3.39.0",
     "serverless-plugin-utils": "^0.2.0",
     "tslint": "^6.1.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "ts-node": "^10.4.0"
   }
 }
