--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "clean": "rimraf dist/*",
     "copy-assets": "copyfiles -f src/apiBase/tools/templates/* dist/templates",
+    "exec-deploy-demo": "serverless deploy --stage Demo",
+    "deploy-demo": "npm-run-all build copy-assets exec-deploy-demo",
     "exec-deploy-staging": "serverless deploy --stage Staging",
     "deploy-staging": "npm-run-all build copy-assets exec-deploy-staging",
     "exec-deploy-prod": "serverless deploy --stage Prod",
