--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -66,17 +66,21 @@ jobs:
           # Run the demo.mysql file to populate demo data
           mysql -h "$DB_HOST" -u "$DB_USER" -p"$DB_PASS" "$DB_NAME" < tools/dbScripts/demo.mysql
 
+  jobs:
   deploy:
     name: Deploy Demo
-    needs: cleanup
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        with:
-          submodules: "true"
 
-      - uses: actions/cache@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: "18"
+
+      - name: Cache npm dependencies
+        uses: actions/cache@v3
         with:
           path: ~/.npm
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -91,14 +95,29 @@ jobs:
           aws-secret-access-key: ${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
-      - name: Setup Serverless
-        run: export SERVERLESS_ACCESS_KEY="$SERVERLESS_ACCESS_KEY"
+      - name: Install dependencies
+        run:
+          |
+          npm ci
+
+      - name: Check Serverless version
+        run: npx serverless --version
+
+      - name: Prepare Lambda Layer
+        run:
+          |
+          mkdir -p layer/nodejs
+          cp package.json layer/nodejs/
+          cd layer/nodejs
+          npm install --production
+          cd ../..
 
       - name: Deploy API
         run:
           |
-          npm install
-          npm run deploy-demo
+          npm run build
+          npm run copy-assets
+          npx serverless deploy --stage Demo --verbose
 
       - name: Serverless package contents
         run:
