--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "exec-deploy-prod": "serverless deploy --stage Prod",
     "deploy-prod": "npm-run-all build exec-deploy-prod",
     "initdb": "ts-node tools/initdb",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint src/**/*.ts --fix",
     "tsc": "tsc",
     "build": "npm-run-all clean lint tsc",
+    "build-layer": "npm run clean-layer && mkdir -p layer/nodejs && cp tools/layer-package.json layer/nodejs/package.json && cd layer/nodejs && npm install --production",
+    "clean-layer": "rimraf layer",
+    "rebuild-layer": "npm-run-all clean-layer build-layer",
     "dev:start": "npm-run-all build start",
     "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
     "start": "node .",
@@ -24,40 +27,44 @@
   },
   "keywords": [],
   "author": "ChurchApps",
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "dependencies": {
-    "@aws-sdk/client-polly": "^3.658.0",
-    "@churchapps/apihelper": "0.0.23",
-    "aws-serverless-express": "^3.4.0",
-    "axios": "^1.3.4",
-    "body-parser": "^1.19.1",
+    "@aws-sdk/client-polly": "^3.600.0",
+    "@churchapps/apihelper": "0.0.24",
+    "@codegenie/serverless-express": "^4.16.0",
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
     "ics": "^3.8.1",
-    "inversify": "^6.0.1",
-    "inversify-express-utils": "^6.4.3",
+    "inversify": "^6.2.2",
+    "inversify-express-utils": "^6.5.0",
     "oauth": "^0.10.2",
-    "openai": "^5.0.1",
+    "openai": "^5.3.0",
     "pexels": "^1.4.0",
     "reflect-metadata": "^0.2.2",
     "youtube-captions-scraper": "^2.0.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/dotenv": "^8.2.0",
-    "@types/express": "^4.17.13",
-    "@types/mysql": "^2.15.26",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/mysql": "^2.15.27",
     "@types/oauth": "^0.9.6",
     "@types/youtube-captions-scraper": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "copyfiles": "^2.4.1",
-    "fs-extra": "^11.1.1",
-    "nodemon": "^2.0.15",
+    "eslint": "^9.28.0",
+    "fs-extra": "^11.3.0",
+    "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
+    "rimraf": "^5.0.10",
     "serverless": "3.39.0",
     "serverless-plugin-utils": "^0.2.0",
-    "tslint": "^6.1.2",
-    "typescript": "^5.6.2",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
