--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "lib": [
-      "ESNext",
+      "ES2022",
       "DOM"
     ],
     "types": [
@@ -11,13 +11,14 @@
     ],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "es6",
+    "target": "ES2020",
     "noImplicitAny": true,
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
     "strict": false,
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
       "*": [
