--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "openai": "^5.3.0",
     "pexels": "^1.4.0",
     "reflect-metadata": "^0.2.2",
-    "youtube-captions-scraper": "^2.0.3"
+    "youtube-captions-scraper": "^2.0.3",
+    "youtube-transcript-api": "^2.0.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
