--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "ics": "^3.8.1",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.5.0",
+    "mysql2": "^3.14.1",
     "oauth": "^0.10.2",
     "openai": "^5.3.0",
     "pexels": "^1.4.0",
@@ -52,7 +53,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
-    "@types/mysql": "^2.15.27",
     "@types/oauth": "^0.9.6",
     "@types/youtube-captions-scraper": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
