--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-polly": "^3.600.0",
+    "@aws-sdk/client-polly": "^3.716.0",
     "@churchapps/apihelper": "0.0.24",
     "@codegenie/serverless-express": "^4.16.0",
     "axios": "^1.9.0",
@@ -52,18 +52,19 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
+    "@types/express": "^5.0.0",
     "@types/oauth": "^0.9.6",
     "@types/youtube-captions-scraper": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.0",
-    "@typescript-eslint/parser": "^8.34.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.1",
+    "@typescript-eslint/parser": "^8.34.1",
+    "@eslint-community/eslint-utils": "^4.4.1",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.28.0",
+    "eslint": "^9.18.0",
     "fs-extra": "^11.3.0",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^5.0.10",
-    "serverless": "3.39.0",
+    "rimraf": "^6.0.1",
+    "serverless": "^4.6.0",
     "serverless-plugin-utils": "^0.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
