Package and lint updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "baseUrl": ".",
     "strict": false,
     "skipLibCheck": true,
+    "incremental": true,
     "allowSyntheticDefaultImports": true,
     "paths": {
       "*": [
