--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "initdb": "ts-node tools/initdb",
     "lint": "eslint src --fix && prettier --write src/**/*.ts",
     "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc",
+    "build": "npm-run-all clean tsc",
+    "build-fast": "npm-run-all clean tsc",
+    "dev:ts": "ts-node src/app.ts",
+    "build-with-lint": "npm-run-all clean lint tsc",
     "build-layer": "npm run clean-layer && mkdir -p layer/nodejs && cp tools/layer-package.json layer/nodejs/package.json && cd layer/nodejs && npm install --production",
     "clean-layer": "rimraf layer",
     "rebuild-layer": "npm-run-all clean-layer build-layer",
     "dev:start": "npm-run-all build start",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
+    "dev": "nodemon --watch src -e ts,ejs --exec \"ts-node src/app.ts\"",
     "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "serverless-local": "serverless invoke local -f api"
@@ -32,40 +35,41 @@
     "npm": ">=10.0.0"
   },
   "dependencies": {
-    "@aws-sdk/client-polly": "^3.716.0",
-    "@churchapps/apihelper": "0.0.24",
+    "@aws-sdk/client-polly": "^3.840.0",
+    "@churchapps/apihelper": "0.1.1",
     "@codegenie/serverless-express": "^4.16.0",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.0.1",
     "express": "^4.21.2",
     "ics": "^3.8.1",
     "inversify": "^6.2.2",
     "inversify-express-utils": "^6.5.0",
     "mysql2": "^3.14.1",
     "oauth": "^0.10.2",
-    "openai": "^5.3.0",
+    "openai": "^5.8.2",
     "pexels": "^1.4.0",
     "reflect-metadata": "^0.2.2",
+    "rrule": "^2.8.1",
     "youtube-captions-scraper": "^2.0.3",
-    "youtube-transcript-api": "^2.0.4"
+    "youtube-transcript-api": "^3.0.6"
   },
   "devDependencies": {
+    "@eslint-community/eslint-utils": "^4.7.0",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/oauth": "^0.9.6",
     "@types/youtube-captions-scraper": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.34.1",
-    "@typescript-eslint/parser": "^8.34.1",
-    "@eslint-community/eslint-utils": "^4.4.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "copyfiles": "^2.4.1",
-    "eslint": "^9.18.0",
+    "eslint": "^9.30.1",
     "fs-extra": "^11.3.0",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.5.2",
+    "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
-    "serverless": "^4.6.0",
+    "serverless": "^4.17.1",
     "serverless-plugin-utils": "^0.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
