Debugging demo deployments

--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "clean": "rimraf --glob dist/*",
     "copy-assets": "copyfiles -f src/apiBase/tools/templates/* dist/templates",
     "exec-deploy-demo": "serverless deploy --stage Demo",
-    "deploy-demo": "npm-run-all build copy-assets exec-deploy-demo",
+    "deploy-demo": "npm-run-all build copy-assets build-layer exec-deploy-demo",
     "exec-deploy-staging": "serverless deploy --stage Staging",
-    "deploy-staging": "npm-run-all build copy-assets exec-deploy-staging",
+    "deploy-staging": "npm-run-all build copy-assets build-layer exec-deploy-staging",
     "exec-deploy-prod": "serverless deploy --stage Prod",
-    "deploy-prod": "npm-run-all build exec-deploy-prod",
+    "deploy-prod": "npm-run-all build build-layer exec-deploy-prod",
     "initdb": "ts-node tools/initdb",
     "lint": "eslint src --fix && prettier --write src/**/*.ts",
     "tsc": "tsc",
